--- a/index.d/dharmit.yml
+++ b/index.d/dharmit.yml
@@ -9,6 +9,7 @@ Projects:
     desired-tag: latest
     notify-email: shahdharmit@gmail.com
     depends-on: centos/centos:latest
+    build_context: ./
 
   - id: 4
     app-id: dharmit
@@ -20,6 +21,7 @@ Projects:
     desired-tag: latest
     notify-email: shahdharmit@gmail.com
     depends-on: centos/centos:latest
+    build_context: ./
 
   - id: 5
     app-id: dharmit
@@ -31,6 +33,7 @@ Projects:
     desired-tag: latest
     notify-email: shahdharmit@gmail.com
     depends-on: centos/centos:latest
+    build_context: ./
 
   - id: 6
     app-id: dharmit
@@ -42,6 +45,7 @@ Projects:
     desired-tag: latest
     notify-email: shahdharmit@gmail.com
     depends-on: centos/centos:latest
+    build_context: ./
 
   - id: 7
     app-id: dharmit
@@ -53,6 +57,7 @@ Projects:
     desired-tag: 1.6
     notify-email: shahdharmit@gmail.com
     depends-on: dharmit/base:latest
+    build_context: ./
 
   - id: 8
     app-id: dharmit
@@ -64,6 +69,7 @@ Projects:
     desired-tag: 1.8
     notify-email: shahdharmit@gmail.com
     depends-on: dharmit/base:latest
+    build_context: ./
 
   - id: 9
     app-id: dharmit
@@ -75,6 +81,7 @@ Projects:
     desired-tag: 2.7
     notify-email: shahdharmit@gmail.com
     depends-on: centos/centos:latest
+    build_context: ./
 
   - id: 10
     app-id: dharmit
@@ -86,6 +93,7 @@ Projects:
     desired-tag: 3.5
     notify-email: shahdharmit@gmail.com
     depends-on: centos/centos:latest
+    build_context: ./
 
   - id: 11
     app-id: dharmit
@@ -97,6 +105,7 @@ Projects:
     desired-tag: latest
     notify-email: shahdharmit@gmail.com
     depends-on: centos/centos:latest
+    build_context: ./
 
   - id: 12
     app-id: dharmit
@@ -108,6 +117,7 @@ Projects:
     desired-tag: latest
     notify-email: shahdharmit@gmail.com
     depends-on: dharmit/base:latest
+    build_context: ./
 
   - id: 13
     app-id: dharmit
@@ -120,4 +130,3 @@ Projects:
     notify-email: shahdharmit@gmail.com
     depends-on: dharmit/base:latest
     build-context: ./
-
