--- a/index.d/bamachrn.yaml
+++ b/index.d/bamachrn.yaml
@@ -8,5 +8,5 @@ Projects:
     git-path: demo
     target-file: Dockerfile.demo
     desired-tag: release
-    notify-email: container-status-report@centos.org
+    notify-email: shahdharmit@gmail.com
     depends-on: centos/centos:latest
