--- a/index.d/centos.yaml
+++ b/index.d/centos.yaml
@@ -7,7 +7,7 @@ Projects:
     git-path: kubernetes/master
     target-file: Dockerfile
     desired-tag: latest
-    notify-email: container-status-report@centos.org
+    notify-email: shahdharmit@gmail.com
     depends-on: centos/centos:latest
 
   - id: 2
@@ -18,7 +18,7 @@ Projects:
     git-path: kubernetes/apiserver
     target-file: Dockerfile
     desired-tag: latest
-    notify-email: container-status-report@centos.org
+    notify-email: shahdharmit@gmail.com
     depends-on:
       - centos/centos:latest
       - centos/kubernetes-master:latest
