--- a/index.d/gluster.yaml
+++ b/index.d/gluster.yaml
@@ -7,7 +7,7 @@ Projects:
     git-path: extras/docker/centos
     target-file: Dockerfile
     desired-tag: latest
-    notify-email: container-status-report@centos.org
+    notify-email: shahdharmit@gmail.com
     build-context: ./
     prebuild-script: ./prepare-build.sh
     prebuild-context: extras/docker/centos
