--- a/index.d/arrfab.yaml
+++ b/index.d/arrfab.yaml
@@ -7,6 +7,6 @@ Projects:
     git-path: /
     target-file: Dockerfile
     desired-tag: latest
-    notify-email: arrfab@centos.org
+    notify-email: shahdharmit@gmail.com
     build-context: ./
     depends-on: centos/centos:7
