--- a/index.d/cockpit.yaml
+++ b/index.d/cockpit.yaml
@@ -8,7 +8,7 @@ Projects:
     git-path: containers/kubernetes
     target-file: Dockerfile.centos7
     desired-tag: latest
-    notify-email: petervo@redhat.com
+    notify-email: shahdharmit@gmail.com
     build-context: ./
     depends-on: centos/centos:latest
 
@@ -20,7 +20,7 @@ Projects:
     git-path: cockpit/kubernetes
     target-file: Dockerfile.testing
     desired-tag: testing
-    notify-email: mohammed.zee1000@gmail.com
+    notify-email: shahdharmit@gmail.com
     build-context: ./
     depends-on: centos/centos:latest
 
@@ -32,7 +32,7 @@ Projects:
     git-path: containers/ws
     target-file: Dockerfile.centos7
     desired-tag: latest
-    notify-email: petervo@redhat.com
+    notify-email: shahdharmit@gmail.com
     build-context: ./
     depends-on: centos/centos:latest
 
@@ -44,6 +44,6 @@ Projects:
     git-path: cockpit/ws
     target-file: Dockerfile.testing
     desired-tag: testing
-    notify-email: mohammed.zee1000@gmail.com
+    notify-email: shahdharmit@gmail.com
     build-context: ./
     depends-on: centos/centos:latest
