--- a/index.d/datamodel.yaml
+++ b/index.d/datamodel.yaml
@@ -7,6 +7,6 @@ Projects:
     git-path: centos-java/
     target-file: Dockerfile
     desired-tag: latest
-    notify-email: data-model-gremlin@googlegroups.com
+    notify-email: shahdharmit@gmail.com
     build-context: ./
     depends-on: centos/centos:7
