--- a/index.d/dotnet.yaml
+++ b/index.d/dotnet.yaml
@@ -7,7 +7,7 @@ Projects:
     git-path: 2.1/runtime
     target-file: Dockerfile
     desired-tag: latest
-    notify-email: dotnet-team@redhat.com
+    notify-email: shahdharmit@gmail.com
     build-context: ./
     depends-on: centos/centos:latest
 
@@ -19,7 +19,7 @@ Projects:
     git-path: 2.1/build
     target-file: Dockerfile
     desired-tag: latest
-    notify-email: dotnet-team@redhat.com
+    notify-email: shahdharmit@gmail.com
     build-context: ./
     depends-on:
        - centos/centos:latest
@@ -33,7 +33,7 @@ Projects:
     git-path: 2.2/runtime
     target-file: Dockerfile
     desired-tag: latest
-    notify-email: dotnet-team@redhat.com
+    notify-email: shahdharmit@gmail.com
     build-context: ./
     depends-on: centos/centos:latest
 
@@ -45,7 +45,7 @@ Projects:
     git-path: 2.2/build
     target-file: Dockerfile
     desired-tag: latest
-    notify-email: dotnet-team@redhat.com
+    notify-email: shahdharmit@gmail.com
     build-context: ./
     depends-on:
        - centos/centos:latest
