--- a/index.d/fabric8.yaml
+++ b/index.d/fabric8.yaml
@@ -7,7 +7,7 @@ Projects:
     git-path: /
     target-file: Dockerfile
     desired-tag: latest
-    notify-email: cp.build.inb@karan.org
+    notify-email: shahdharmit@gmail.com
     build-context: ./
     depends-on: centos/centos:latest  
 
@@ -19,6 +19,6 @@ Projects:
     git-path: /
     target-file: Dockerfile
     desired-tag: 1.0.1
-    notify-email: cp.build.inb@karan.org
+    notify-email: shahdharmit@gmail.com
     build-context: ./
     depends-on: centos/centos:latest
