--- a/index.d/kbsingh.yaml
+++ b/index.d/kbsingh.yaml
@@ -7,7 +7,7 @@ Projects:
     git-path: /
     target-file: Dockerfile
     desired-tag: latest
-    notify-email: cp.build.inb@karan.org
+    notify-email: shahdharmit@gmail.com
     build-context: ./
     depends-on: centos/centos:latest
 
@@ -19,7 +19,7 @@ Projects:
     git-path: /
     target-file: Dockerfile
     desired-tag: latest
-    notify-email: cp.build.inb@karan.org
+    notify-email: shahdharmit@gmail.com
     build-context: ./
     depends-on: centos/centos:latest
 
@@ -31,7 +31,7 @@ Projects:
     git-path: /
     target-file: Dockerfile
     desired-tag: latest
-    notify-email: cp.build.inb@karan.org
+    notify-email: shahdharmit@gmail.com
     build-context: ./
     depends-on: centos/centos:latest
 
@@ -43,7 +43,7 @@ Projects:
     git-path: /
     target-file: Dockerfile
     desired-tag: 0.11.19-1
-    notify-email: cp.build.inb@karan.org
+    notify-email: shahdharmit@gmail.com
     build-context: ./
     depends-on: centos/centos:7
 
@@ -55,7 +55,7 @@ Projects:
     git-path: /
     target-file: Dockerfile
     desired-tag: 3.0.7-1.el7
-    notify-email: cp.build.inb@karan.org
+    notify-email: shahdharmit@gmail.com
     build-context: ./
     depends-on: centos/centos:7  
 
@@ -67,7 +67,7 @@ Projects:
     git-path: /
     target-file: Dockerfile
     desired-tag: 1.7.4-1.el7
-    notify-email: cp.build.inb@karan.org
+    notify-email: shahdharmit@gmail.com
     build-context: ./
     depends-on: centos/centos:7
 
@@ -79,7 +79,7 @@ Projects:
     git-path: /
     target-file: Dockerfile
     desired-tag: 1.10.2
-    notify-email: cp.build.inb@karan.org
+    notify-email: shahdharmit@gmail.com
     build-context: ./
     depends-on: centos/centos:latest
 
@@ -91,7 +91,7 @@ Projects:
     git-path: /
     target-file: Dockerfile
     desired-tag: 1
-    notify-email: cp.build.inb@karan.org
+    notify-email: shahdharmit@gmail.com
     depends-on: centos/centos:latest
     build-context: ./
     prebuild-script: pre-build.sh
