--- a/index.d/mohammedzee1000.yaml
+++ b/index.d/mohammedzee1000.yaml
@@ -7,7 +7,7 @@ Projects:
     git-path: 9.4/
     target-file: Dockerfile
     desired-tag: 9.4
-    notify-email: mohammed.zee1000@gmail.com
+    notify-email: shahdharmit@gmail.com
     build-context: ./
     depends-on: centos/centos:latest
   
@@ -19,7 +19,7 @@ Projects:
     git-path: 9.5/
     target-file: Dockerfile
     desired-tag: 9.5
-    notify-email: mohammed.zee1000@gmail.com
+    notify-email: shahdharmit@gmail.com
     build-context: ./
     depends-on: centos/centos:latest
   
@@ -31,7 +31,7 @@ Projects:
     git-path: 9.6/
     target-file: Dockerfile
     desired-tag: 9.6
-    notify-email: mohammed.zee1000@gmail.com
+    notify-email: shahdharmit@gmail.com
     build-context: ./
     depends-on: centos/centos:latest
 
@@ -43,7 +43,7 @@ Projects:
     git-path: server-postgres/
     target-file: Dockerfile
     desired-tag: latest
-    notify-email: mohammed.zee1000@gmail.com
+    notify-email: shahdharmit@gmail.com
     build-context: ./
     depends-on: 
       - centos/centos:latest
@@ -57,7 +57,7 @@ Projects:
     git-path: kyoto_tycoon/
     target-file: Dockerfile
     desired-tag: latest
-    notify-email: mohammed.zee1000@gmail.com
+    notify-email: shahdharmit@gmail.com
     build-context: ./
     depends-on: 
       - centos/centos:latest
@@ -70,7 +70,7 @@ Projects:
     git-path: centos/
     target-file: Dockerfile.1.3.8
     desired-tag: 1.3.8
-    notify-email: mohammed.zee1000@gmail.com
+    notify-email: shahdharmit@gmail.com
     build-context: ./
     depends-on:
       - centos/centos:7
